Add Makefile, SVG icon, and web manifest for project setup

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,8 @@
 :root {
   min-height: 100vh;
   scrollbar-width: none;
+  background-color: white;
+  color: black;
 }
 
 @media screen and (width >= 600px) and (width <= 1199px) {
